[package]
name = "pywinpty"
version = "3.0.3-dev"
authors = ["Edgar Andrés Margffoy Tuay <andfoy@gmail.com>"]
description = "Pseudo terminal support for Windows from Python."
repository = "https://github.com/spyder-ide/pywinpty"
license = "MIT"
keywords = ["pty", "pseudo-terminal", "conpty", "windows", "winpty"]
readme = "README.md"
edition = "2024"

[lib]
name = "winpty"
crate-type = ["cdylib"]

[build-dependencies]
glob = "0.3.2"

[dependencies]
winpty-rs = "1.0.5"

[dependencies.pyo3]
version = "0.27.2"
features = ["extension-module"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
