[package]
name = "pywinpty_findlib"
version = "0.3.0"
authors = ["Edgar Andres Margffoy Tuay <andfoy@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["pwyinpty", "windows", "findlib"]
description = "Crate that exposes GetProcAddress and GetModuleHandleW to detect Win32 API availability."
repository = "https://github.com/spyder-ide/pywinpty"

[dependencies]
windows = "0.12.0"

[build-dependencies]
windows = "0.12.0"
