[package]
name = "pty_rs"
version = "0.1.0"
edition = "2021"
links = "winpty"

[dependencies]
enum-primitive-derive = "0.2.2"
num-traits = "0.2"

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[features]
conpty = []
winpty = []
