[package]
name = "pty_rs"
version = "0.1.0"
edition = "2021"
links = "winpty"

[dependencies]
enum-primitive-derive = "0.2.2"
num-traits = "0.2"
bitflags = "1.3"

[build-dependencies]
which = "4.1.0"

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Security"
]

[build-dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[features]
conpty = []
winpty = []
