[package]
name = "winpty-rs"
version = "0.1.0"
edition = "2021"
links = "winpty"

[dependencies]
enum-primitive-derive = "0.2.2"
num-traits = "0.2"
bitflags = "1.3"

[build-dependencies]
which = "4.1.0"

[dependencies.windows]
version = "0.29.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Globalization",
    # ConPTY-specific
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies.windows]
version = "0.29.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
]

[dev-dependencies]
regex = "1.5"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[features]
conpty = []
winpty = []
winpty_example = ["winpty"]
conpty_example = ["conpty"]

[lib]
name = "winptyrs"
path = "src/lib.rs"

[[bin]]
name = "winpty_example"
path = "src/examples/winpty.rs"
required-features = ["winpty_example"]

[[bin]]
name = "conpty_example"
path = "src/examples/conpty.rs"
required-features = ["conpty_example"]
